# bloom-filter-cpp

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  PUSH_TO_GITHUB.md  README.md
docs/: core-design.md
examples/: CMakeLists.txt  basic_usage.cpp
include/bloomfilter/: bloom_filter.hpp  hash_functions.hpp  types.hpp
scripts/: build.sh
tests/: CMakeLists.txt  test_bloom_filter.cpp
